apps/k8s-ai-agent/dev/agent-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-agent
  namespace: k8s-ai-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-agent
  template:
    metadata:
      labels:
        app: k8s-agent
    spec:
      serviceAccountName: k8s-agent

      containers:
        - name: agent
          image: ghcr.io/yakovm44/k8s-ai-agent:2d4551cc6cc8baedfc65b6d52703b9445e6a78ea
          ports:
            - containerPort: 8000
