apps/k8s-ai-agent/dev/agent-ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-agent
  namespace: default
spec:
  selector:
    app: k8s-agent
  ports:
    - port: 8000
      targetPort: 8000
