apps/k8s-ai-agent/dev/agent-ai/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: k8s-agent
  namespace: k8s-ai-agent
spec:
  ingressClassName: k8s-agent
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-agent  # Replace with your Kubernetes Service name
            port:
              number: 8000
